src/test/deca/context/valid/SansObjet/DeclVar-Mult-int-int-int.deca
// Description:
//    Declaration of a int variable using * operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  10; 
    int y = 20; 
    int z = x * y ; 
}
